--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^1.1.0-beta.20",
+    "element-ui": "^2.15.6",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-0"
   },
